fix: menu options gap

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -85,7 +85,6 @@
     flex-direction: column;
     position: absolute;
     background-color: var(--container-color);
-    gap: 2em;
     z-index: 2;
     box-shadow: var(--container-shadow);
   }
